--- a/src/app/account/account-sidebar/account-settings/account-settings.component.html
+++ b/src/app/account/account-sidebar/account-settings/account-settings.component.html
@@ -1,9 +1,7 @@
 <mat-card class="custom-card" *ngIf="!!configurations?.length">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">
-        {{ 'ACCOUNT_PAGE.SIDEBAR.SETTINGS' | translate}}
-      </h2>
+      <h2 class="mat-card-title-text">{{ 'ACCOUNT_PAGE.SIDEBAR.SETTINGS' | translate }}</h2>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content class="mat-card-content-with-actions">
