--- a/src/app/account/account-sidebar/account-statistic/account-statistics.component.html
+++ b/src/app/account/account-sidebar/account-statistic/account-statistics.component.html
@@ -1,9 +1,7 @@
 <mat-card class="custom-card">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">
-        {{ 'ACCOUNT_PAGE.SIDEBAR.STATISTIC' | translate}}
-      </h2>
+      <h2 class="mat-card-title-text">{{ 'ACCOUNT_PAGE.SIDEBAR.STATISTIC' | translate }}</h2>
     </mat-card-title>
     <div class="mat-card-header-menu">
       <button
