--- a/src/app/vm/vm-sidebar/storage-detail/volumes/volumes.component.html
+++ b/src/app/vm/vm-sidebar/storage-detail/volumes/volumes.component.html
@@ -1,4 +1,1 @@
-<cs-volume
-  *ngFor="let volume of (volumes | csVolumesSort)"
-  [volume]="volume"
-></cs-volume>
+<cs-volume *ngFor="let volume of (volumes | csVolumesSort)" [volume]="volume"></cs-volume>
