--- a/src/app/dialog/dialog-service/ask-dialog/ask-dialog.component.html
+++ b/src/app/dialog/dialog-service/ask-dialog/ask-dialog.component.html
@@ -1,18 +1,13 @@
-<h3 *ngIf="config?.title" class="mat-dialog-title">
-  {{ dialogConfiguration?.title | translate }}
-</h3>
-<div
-  class="mat-dialog-content notification"
-  [innerHTML]="translatedMessage | async"
-></div>
+<h3 *ngIf="config?.title" class="mat-dialog-title">{{ dialogConfiguration?.title | translate }}</h3>
+<div class="mat-dialog-content notification" [innerHTML]="translatedMessage | async"></div>
 <div class="mat-dialog-actions">
   <button
     *ngFor="let action of config?.actions"
     mat-button
     color="primary"
     (click)="actionClicked(action)"
-    [ngClass]="{'close': action.isClosingAction}"
+    [ngClass]="{ close: action.isClosingAction }"
   >
-    {{action.text | translate}}
+    {{ action.text | translate }}
   </button>
 </div>
