--- a/src/app/settings/components/api-settings/api-settings.component.html
+++ b/src/app/settings/components/api-settings/api-settings.component.html
@@ -13,12 +13,11 @@
   </div>
 
   <div class="settings-section-content">
-
     <ng-container *ngIf="userKeys?.apikey && userKeys?.secretkey">
       <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.API_KEY' | translate }}</h3>
       <cs-input-group>
         <mat-form-field cs-input-group-textbox>
-          <input matInput [value]="userKeys.apikey" readonly>
+          <input matInput [value]="userKeys.apikey" readonly />
         </mat-form-field>
         <cs-clipboard-button [value]="userKeys.apikey" cs-input-group-button></cs-clipboard-button>
       </cs-input-group>
@@ -26,17 +25,19 @@
       <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.API_SECRET_KEY' | translate }}</h3>
       <cs-input-group>
         <mat-form-field cs-input-group-textbox>
-          <input matInput [value]="userKeys.secretkey" readonly>
+          <input matInput [value]="userKeys.secretkey" readonly />
         </mat-form-field>
-        <cs-clipboard-button [value]="userKeys.secretkey" cs-input-group-button></cs-clipboard-button>
+        <cs-clipboard-button
+          [value]="userKeys.secretkey"
+          cs-input-group-button
+        ></cs-clipboard-button>
       </cs-input-group>
     </ng-container>
 
     <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.API_URL' | translate }}</h3>
     <a class="truncate" target="_blank" [href]="apiUrl">{{ apiUrl }}</a>
 
-    <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.API_DOC_LINK' | translate}}</h3>
+    <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.API_DOC_LINK' | translate }}</h3>
     <a class="truncate" target="_blank" [href]="apiDocumentationLink">{{ apiDocumentationLink }}</a>
-
   </div>
 </section>
