--- a/src/app/shared/actions/volume-actions/volume-attachment/volume-attachment.component.html
+++ b/src/app/shared/actions/volume-actions/volume-attachment/volume-attachment.component.html
@@ -1,45 +1,27 @@
 <ng-container>
-  <h3 *ngIf="virtualMachines" class="mat-dialog-title">{{
-    'VOLUME_PAGE.ATTACHMENT.CHOOSE_VIRTUAL_MACHINE' | translate }}</h3>
-  <h3 *ngIf="!virtualMachines.length" class="mat-dialog-title">{{
-    'VOLUME_PAGE.ATTACHMENT.NO_VMS' | translate }}</h3>
+  <h3 *ngIf="virtualMachines" class="mat-dialog-title">
+    {{ 'VOLUME_PAGE.ATTACHMENT.CHOOSE_VIRTUAL_MACHINE' | translate }}
+  </h3>
+  <h3 *ngIf="!virtualMachines.length" class="mat-dialog-title">
+    {{ 'VOLUME_PAGE.ATTACHMENT.NO_VMS' | translate }}
+  </h3>
   <form (ngSubmit)="attach()" #volumeAttachmentForm="ngForm" novalidate>
     <div class="mat-dialog-content">
       <div>
-        <mat-form-field
-          class="full-width-input"
-        >
-          <mat-select
-            [(ngModel)]="virtualMachineId"
-            id="vm"
-            name="vm"
-          >
-            <mat-option
-              *ngFor="let vm of virtualMachines"
-              [value]="vm.id"
-            >
+        <mat-form-field class="full-width-input">
+          <mat-select [(ngModel)]="virtualMachineId" id="vm" name="vm">
+            <mat-option *ngFor="let vm of virtualMachines" [value]="vm.id">
               {{ vm.displayname }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
-
     </div>
     <div class="mat-dialog-actions">
-      <button
-        mat-button
-        color="primary"
-        matDialogClose
-        type="button"
-      >
+      <button mat-button color="primary" matDialogClose type="button">
         {{ 'COMMON.CANCEL' | translate }}
       </button>
-      <button
-        [disabled]="!virtualMachineId"
-        mat-button
-        color="primary"
-        type="submit"
-      >
+      <button [disabled]="!virtualMachineId" mat-button color="primary" type="submit">
         {{ 'VOLUME_PAGE.ATTACHMENT.ATTACH' | translate }}
       </button>
     </div>
