--- a/src/app/shared/components/keyboards/keyboards.component.html
+++ b/src/app/shared/components/keyboards/keyboards.component.html
@@ -1,16 +1,11 @@
-<mat-form-field
-  class="form-select-control"
->
+<mat-form-field class="form-select-control">
   <mat-select
     name="keyboard"
     [value]="keyboardLayout"
     (selectionChange)="keyboardChange.emit($event.value)"
   >
-    <mat-option
-      *ngFor="let l of keyboardLayouts"
-      [value]="l.value"
-    >
-      {{ l.name | translate}}
+    <mat-option *ngFor="let l of keyboardLayouts" [value]="l.value">
+      {{ l.name | translate }}
     </mat-option>
   </mat-select>
 </mat-form-field>
