--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,4 +1,4 @@
 <mat-form-field>
   <mat-icon matPrefix class="mdi-magnify"></mat-icon>
-  <input matInput placeholder="{{'COMMON.SEARCH'|translate}}" [(ngModel)]="query">
+  <input matInput placeholder="{{ 'COMMON.SEARCH' | translate }}" [(ngModel)]="query" />
 </mat-form-field>
