--- a/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot/snapshot-modal.component.html
+++ b/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot/snapshot-modal.component.html
@@ -1,29 +1,26 @@
-<h3 class="mat-dialog-title">
-  {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.TITLE' | translate }}
-</h3>
+<h3 class="mat-dialog-title">{{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.TITLE' | translate }}</h3>
 <div class="mat-dialog-content" *ngIf="volume?.snapshots?.length">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.NAME' | translate}}
+        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.NAME' | translate }}
       </th>
-      <td mat-cell *matCellDef="let row"> {{ row.name }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
     </ng-container>
 
     <!-- Date Column -->
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.DATE' | translate}}
+        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.DATE' | translate }}
       </th>
-      <td mat-cell *matCellDef="let row">
-        {{ snapshotCreatedDate(row) | date:'y-MM-dd H:m:s' }}</td>
+      <td mat-cell *matCellDef="let row">{{ snapshotCreatedDate(row) | date: 'y-MM-dd H:m:s' }}</td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>
-        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.ACTIONS' | translate}}
+        {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.ACTIONS' | translate }}
       </th>
       <td mat-cell *matCellDef="let row">
         <button
@@ -41,14 +38,13 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+
   <div class="row" *ngIf="!volume.snapshots?.length">
     {{ 'VM_PAGE.STORAGE_DETAILS.SNAPSHOTS_MODAL.NO_SNAPSHOTS' | translate }}
   </div>
 </div>
 <div class="mat-dialog-actions">
-  <button mat-button color="primary" matDialogClose>
-    {{ 'COMMON.CLOSE' | translate }}
-  </button>
+  <button mat-button color="primary" matDialogClose>{{ 'COMMON.CLOSE' | translate }}</button>
 </div>
