--- a/src/app/vm/components/vm-snapshots-sidebar-card/vm-snapshots-sidebar-card.component.html
+++ b/src/app/vm/components/vm-snapshots-sidebar-card/vm-snapshots-sidebar-card.component.html
@@ -21,7 +21,7 @@
             ({{ vmSnapshotsCount }})
           </button>
         </div>
-        <div class="snapshot-name">
+        <div class="snapshot-name truncate">
           {{ lastVmSnapshot.displayname }}
         </div>
         <div class="two-columns">
