--- a/src/app/vm/components/vm-snapshot-list-dialog/vm-snapshot-list-dialog.component.scss
+++ b/src/app/vm/components/vm-snapshot-list-dialog/vm-snapshot-list-dialog.component.scss
@@ -15,3 +15,9 @@ mat-dialog-content {
   max-height: 250px;
   min-height: 150px;
 }
+
+.cell-with-tooltip {
+  display: inline-block;
+  vertical-align: bottom;
+  max-width: 100%;
+}
