--- a/src/app/vm/vm-sidebar/vm-detail/vm-snapshot-creation-dialog/vm-snapshot-creation-dialog.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/vm-snapshot-creation-dialog/vm-snapshot-creation-dialog.component.html
@@ -3,10 +3,26 @@
 
   <mat-dialog-content>
     <mat-form-field class="full-width-input">
-      <input matInput formControlName="name" [placeholder]="'COMMON.NAME' | translate">
+      <input
+        matInput
+        formControlName="name"
+        [placeholder]="'COMMON.NAME' | translate"
+        [maxlength]="255"
+      >
+      <mat-hint align="end">
+        <cs-character-count [value]="getNameControl().value" [maxLength]="255"></cs-character-count>
+      </mat-hint>
     </mat-form-field>
     <mat-form-field class="full-width-input">
-      <input matInput formControlName="description" [placeholder]="'COMMON.DESCRIPTION' | translate">
+      <input
+        matInput
+        formControlName="description"
+        [placeholder]="'COMMON.DESCRIPTION' | translate"
+        [maxlength]="255"
+      >
+      <mat-hint align="end">
+        <cs-character-count [value]="getDescriptionControl().value" [maxLength]="255"></cs-character-count>
+      </mat-hint>
     </mat-form-field>
     <mat-checkbox formControlName="snapshotMemory">
       {{ 'VM_PAGE.MODALS.TAKE_VM_SNAPSHOT.SNAPSHOT_MEMORY' | translate }}
