--- a/src/app/shared/components/draggable-select/draggable-select.component.html
+++ b/src/app/shared/components/draggable-select/draggable-select.component.html
@@ -14,9 +14,7 @@
     </span>
   </div>
 
-  <div class="mat-select-arrow-wrapper">
-    <div class="mat-select-arrow"></div>
-  </div>
+  <div class="mat-select-arrow-wrapper"><div class="mat-select-arrow"></div></div>
 </div>
 
 <ng-template
@@ -32,7 +30,6 @@
   (attach)="_onAttached()"
   (detach)="close()"
 >
-
   <div
     #panel
     class="mat-select-panel draggable-select-panel {{ _getPanelTheme() }}"
@@ -40,17 +37,11 @@
     [@transformPanel]="multiple ? 'showing-multiple' : 'showing'"
     (@transformPanel.done)="_panelDoneAnimatingStream.next($event.toState)"
     [style.transformOrigin]="_transformOrigin"
-    [class.mat-select-panel-done-animating]="_panelDoneAnimating"
     [style.font-size.px]="_triggerFontSize"
+    [dragula]="bagId"
+    [dragulaModel]="dragItems"
+    (keydown)="_handleKeydown($event)"
   >
-    <div
-      class="mat-select-content"
-      [@fadeInContent]="'showing'"
-      (@fadeInContent.done)="_onFadeInDone()"
-      [dragula]="bagId"
-      [dragulaModel]="dragItems"
-    >
-      <ng-content></ng-content>
-    </div>
+    <ng-content></ng-content>
   </div>
 </ng-template>
