--- a/src/app/vm-logs/invalidate-vm-logs-token/invalidate-vm-logs-token.component.html
+++ b/src/app/vm-logs/invalidate-vm-logs-token/invalidate-vm-logs-token.component.html
@@ -1,25 +1,30 @@
-<h3 mat-dialog-title>{{ 'LOGS_PAGE.TOKEN.INVALIDATE_TOKEN' | translate }}</h3>
+<form (ngSubmit)="onInvalidate()" #tokenForm="ngForm">
+  <h3 mat-dialog-title>{{ 'LOGS_PAGE.TOKEN.INVALIDATE_TOKEN' | translate }}</h3>
 
-<mat-dialog-content>
-  <mat-form-field class="full-width-input">
-    <textarea
-      class="vm-logs-key"
-      matInput
-      [(ngModel)]="token"
-      rows="3"
-    ></textarea>
-  </mat-form-field>
-</mat-dialog-content>
+  <mat-dialog-content>
+    <mat-form-field class="full-width-input">
+      <textarea
+        name="token"
+        class="vm-logs-key"
+        matInput
+        [(ngModel)]="token"
+        rows="3"
+        required
+      ></textarea>
+    </mat-form-field>
+  </mat-dialog-content>
 
-<div class="mat-dialog-actions">
-  <button mat-button color="primary" matDialogClose>
-    {{ 'COMMON.CANCEL' | translate }}
-  </button>
-  <button
-    mat-button
-    color="primary"
-    (click)="onInvalidate()"
-  >
-    {{ 'LOGS_PAGE.TOKEN.INVALIDATE' | translate }}
-  </button>
-</div>
+  <div class="mat-dialog-actions">
+    <button mat-button color="primary" matDialogClose>
+      {{ 'COMMON.CANCEL' | translate }}
+    </button>
+    <button
+      mat-button
+      type="submit"
+      color="primary"
+      [disabled]="tokenForm.invalid"
+    >
+      {{ 'LOGS_PAGE.TOKEN.INVALIDATE' | translate }}
+    </button>
+  </div>
+</form>
