--- a/src/app/vm-logs/vm-logs-token/vm-logs-token.component.html
+++ b/src/app/vm-logs/vm-logs-token/vm-logs-token.component.html
@@ -10,6 +10,14 @@
       readonly
     ></textarea>
   </mat-form-field>
+
+  <a
+    target="_blank"
+    rel="nofollow noopener"
+    href="https://github.com/bwsw/cloud-plugin-vm-logs"
+  >
+    {{ 'LOGS_PAGE.TOKEN.HOW_TO_ADD_TOKEN' | translate }}
+  </a>
 </mat-dialog-content>
 
 <div class="mat-dialog-actions">
