fix(disk-offering): cut radio label

--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.scss
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.scss
@@ -49,3 +49,15 @@ table {
 .text-right {
   text-align: right;
 }
+
+mat-expansion-panel-header {
+  position: relative;
+
+  /deep/ .mat-radio-container {
+    position: absolute;
+  }
+
+  /deep/ .mat-radio-label-content {
+    margin-left: 20px;
+  }
+}
