--- a/src/app/shared/components/vm-statistics/vm-statistics.component.html
+++ b/src/app/shared/components/vm-statistics/vm-statistics.component.html
@@ -29,9 +29,9 @@
         {{ 'VM_PAGE.RESOURCE_USAGE.FREE' | translate }}
       </mat-button-toggle>
     </mat-button-toggle-group>
-    <button class="request-resources" mat-raised-button (click)="requestResources()">
-      {{ 'RESOURCE_QUOTAS_PAGE.REQUEST.REQUEST_RESOURCES' | translate }}
-    </button>
+    <!--<button class="request-resources" mat-raised-button (click)="requestResources()">-->
+    <!--{{ 'RESOURCE_QUOTAS_PAGE.REQUEST.REQUEST_RESOURCES' | translate }}-->
+    <!--</button>-->
     <div class="stat-list-container">
       <mat-card *ngFor="let stat of statsList" class="stat-card-md">
         <mat-card-header>
